--- a/01-MLOps Fundamentals/08-k8s/helm/ocr_chart/Chart.yaml
+++ b/01-MLOps Fundamentals/08-k8s/helm/ocr_chart/Chart.yaml
@@ -14,5 +14,5 @@ version: 0.1.0
 appVersion: "1.0.0"
 
 maintainers:
-- email: fullstackdatascience.com
-  name: fullstackdatascience
+- email: mlops.com
+  name: mlops
