--- a/01-MLOps Fundamentals/09-jenkins/docker-compose.yaml
+++ b/01-MLOps Fundamentals/09-jenkins/docker-compose.yaml
@@ -1,13 +1,13 @@
 version: '3.8'
 services:
   jenkins:
-    image: fullstackdatascience/jenkins:lts
+    image: jenkins/jenkins:lts
     container_name: jenkins
     restart: unless-stopped
     privileged: true
     user: root
     ports:
-      - 8081:8080
+      - 8080:8080
       - 50000:50000
     volumes:
       - jenkins_home:/var/jenkins_home
