--- a/01-MLOps Fundamentals/09-jenkins/custom_jenkins/Dockerfile
+++ b/01-MLOps Fundamentals/09-jenkins/custom_jenkins/Dockerfile
@@ -1,5 +1,5 @@
 # Ref: https://hackmamba.io/blog/2022/04/running-docker-in-a-jenkins-container/
 FROM jenkins/jenkins:lts
 USER root
-RUN curl https://get.docker.com > dockerinstall && chmod 777 dockerinstall && ./dockerinstall
+RUN curl https://get.docker.com > docker_install && chmod 777 docker_install && ./docker_install
 USER jenkins
